--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -108,13 +108,15 @@
             if(data.code == 200){
                 if (type==1){
                     //客服
+                    window.location.href="CustomerService.html";
                 }
                 else if(type==2){
                     //任务调度
-
+                    window.location.href="MaintenanceTaskDispatcher.html";
                 }
                 else if(type==3){
                     //技术工程师
+                    window.location.href="Engineer.html";
                 }
                 else if(type==4){
                     //库管
