--- a/src/main/webapp/html/Engineer.html
+++ b/src/main/webapp/html/Engineer.html
@@ -394,16 +394,16 @@
                 maintenanceStatus: '',
                 statusOptions: [{
                     label: '未分配',
-                    value: '未分配'
+                    value: '1'
                 },{
                     label: '已分配',
-                    value: '已分配'
+                    value: '2'
                 },{
                     label: '已维修',
-                    value: '已维修'
+                    value: '3'
                 },{
                     label: '已撤销',
-                    value: '已撤销'
+                    value: '4'
                 }],
                 engineer: '',
                 maintenanceTaskData: []
@@ -419,6 +419,25 @@
                 axios.post("/Devices/getServiceRecord",parma).then(
                     function (response) {
                         var data = JSON.parse(response.data).data;
+
+                        for(var i = 0; i < data.length; i++){
+                            if(data[i].status == 1){
+                                data[i].status = '未分配';
+                                data[i].serviceRecord.status = '未分配';
+                            }
+                            if(data[i].status == 2){
+                                data[i].status = '已分配';
+                                data[i].serviceRecord.status = '已分配';
+                            }
+                            if(data[i].status == 3){
+                                data[i].status = '已完成';
+                                data[i].serviceRecord.status = '已完成';
+                            }
+                            if(data[i].status == 4){
+                                data[i].status = '已撤销';
+                                data[i].serviceRecord.status = '已撤销';
+                            }
+                        }
                         that.maintenanceTaskData = data;
                         console.log(data);
                     }
@@ -493,6 +512,7 @@
             handleTaskInfo: function (info){
                 //接收taskInfo的数据
                 this.taskInfoData = info;
+                console.log(info);
             },
             handleSave: function (){
                 console.log(this.taskInfoData);
